# codex-engineering-playbook

./: .gitignore  AGENTS.md  README.md
.agents/skills/api-contract-review/: SKILL.md
.agents/skills/csharp-backend-feature/: SKILL.md
.agents/skills/csharp-backend-review/: SKILL.md
.agents/skills/frontend-ux-polish/: SKILL.md
.agents/skills/layered-architecture-recon/: SKILL.md
.agents/skills/python-backend-feature/: SKILL.md
.agents/skills/python-backend-review/: SKILL.md
.agents/skills/react-typescript-feature/: SKILL.md
conventions/: architecture.md  csharp.md  python.md  react-typescript.md
examples/csharp-api/: README.md
examples/python-api/: README.md  pyproject.toml
examples/python-api/app/: dependencies.py  main.py
examples/python-api/app/data/: __init__.py  orders.py
examples/python-api/app/routes/: orders.py
examples/python-api/app/schemas/: orders.py
examples/python-api/app/services/: orders.py
examples/python-api/tests/: test_orders.py
examples/react-app/: README.md  index.html  package-lock.json  package.json  vitest.config.ts
examples/react-app/src/: App.tsx  styles.css
examples/react-app/src/api/: orders.ts
scripts/: discover_tests.py  find_feature_insertion_points.py  scan_repo.py  summarize_changed_files.py  validate_playbook.py
templates/csharp/: controller-template.cs  repository-implementation-template.cs  repository-interface-template.cs  service-template.cs
templates/python/: model_validation.py  route_module.py  service_module.py
templates/react/: api-client.ts  component.tsx  frontend-state-example.tsx
(+17 files in other folders)
