[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-engineering-playbook-python-api"
version = "0.1.0"
description = "Small FastAPI example for the Codex engineering playbook."
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115,<1.0",
  "pydantic>=2.9,<3.0",
  "uvicorn>=0.32,<1.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1.0",
  "pytest>=7.4,<9.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
